--- a/Jobsheet_05_PBO.ipynb
+++ b/Jobsheet_05_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWBkX5s0voMGmTsUkPg1xg",
+      "authorship_tag": "ABX9TyPbdk0EiiHbzV45ekUpDIum",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zw0-HjUyYiCI",
-        "outputId": "934cda3d-ae0a-4341-cb52-a09ec08fc4ce"
+        "outputId": "743d5eb2-3269-4573-9892-96ed0cc980ab"
       },
       "outputs": [
         {
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "em54sdxNdHhv",
-        "outputId": "6683f864-b8b5-4546-d73b-acff6754e87d"
+        "outputId": "7eef4c84-4fde-414f-d06c-fd900a16be1b"
       },
       "execution_count": 2,
       "outputs": [
@@ -238,7 +238,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGdsesHLfxT0",
-        "outputId": "3a5eeb85-2813-4bd0-816a-1b09ab44472e"
+        "outputId": "d3dfe5a2-98e3-4673-9133-6a2cfba24207"
       },
       "execution_count": 3,
       "outputs": [
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJWGcpN_iXae",
-        "outputId": "7754fb0d-e1b6-488a-9132-641f8cf8a908"
+        "outputId": "9d6ed903-3a93-473d-9477-ce247be0f773"
       },
       "execution_count": 4,
       "outputs": [
@@ -473,7 +473,7 @@
           "height": 436
         },
         "id": "ieAf5t2Xn9Ny",
-        "outputId": "9eb915be-574b-494a-9372-494365fec8fc"
+        "outputId": "0067b143-d39f-486a-d2fc-c487a0879473"
       },
       "execution_count": 5,
       "outputs": [
@@ -498,109 +498,12 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-8ef0d0dc9ded>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Menampilkan Info Luas (Polimorfisme Campuran):\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdaftar_item\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0mtampilkan_info_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-5-8ef0d0dc9ded>\u001b[0m in \u001b[0;36mtampilkan_info_luas\u001b[0;34m(objek_dengan_luas)\u001b[0m\n\u001b[1;32m     42\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-\"\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mluas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhitung_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m       \u001b[0mnama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnama_bentuk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-8a21d2aa05e8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Menampilkan Info Luas (Polimorfisme Campuran):\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdaftar_item\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0mtampilkan_info_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-5-8a21d2aa05e8>\u001b[0m in \u001b[0;36mtampilkan_info_luas\u001b[0;34m(objek_dengan_luas)\u001b[0m\n\u001b[1;32m     42\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-\"\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mluas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhitung_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m       \u001b[0mnama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnama_bentuk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'hitung_luas'"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import math\n",
-        "\n",
-        "# --- Definisi Kelas dari Hierarki Inheritance ---\n",
-        "class Bentuk:\n",
-        "  # Metode ini bisa dianggap sebagai 'template' atau interface dasar\n",
-        "  def nama_bentuk(self):\n",
-        "    return \"Bentuk Generik\"\n",
-        "\n",
-        "  # Metode ini wajib di-override oleh subclass\n",
-        "  def hitung_luas(self):\n",
-        "    raise NotImplementedError(\"Subclass harus mengimplementasikan metode ini\")\n",
-        "\n",
-        "class Lingkaran(Bentuk):\n",
-        "  def _init_(self, radius):\n",
-        "    self.radius = radius\n",
-        "\n",
-        "  # Override\n",
-        "  def nama_bentuk(self):\n",
-        "    return \"Lingkaran \"\n",
-        "\n",
-        "  # Override\n",
-        "  def hitung_luas(self):\n",
-        "    return math.pi * (self.radius ** 2)\n",
-        "\n",
-        "class Persegi(Bentuk):\n",
-        "  def _init_(self, sisi):\n",
-        "    self.sisi = sisi\n",
-        "\n",
-        "  # Override\n",
-        "  def nama_bentuk(self):\n",
-        "    return \"Persegi\"\n",
-        "\n",
-        "  # Override\n",
-        "  def hitung_luas(self):\n",
-        "    return self.sisi ** self.sisi\n",
-        "\n",
-        "# --- Definisi Kelas Lain (Tidak Terkait Inheritance dengan Bentuk) ---\n",
-        "class TaplakMeja:\n",
-        "  def _init_(self, panjang, lebar):\n",
-        "    self.panjang = panjang\n",
-        "    self.lebar = lebar\n",
-        "\n",
-        "  # Metode dengan nama sama -> 'hitung_luas'\n",
-        "  # Ini menunjukkan TaplakMeja bekerja dengan fungsi polimorfik di bawah\n",
-        "  def hitung_luas(self):\n",
-        "    return self.panjang * self.lebar\n",
-        "\n",
-        "  # Metode yang berbeda, tidak ada di kelas Bentuk\n",
-        "  def deskripsi(self):\n",
-        "    return f\"Taplak Meja {self.panjang}x{self.lebar}\"\n",
-        "\n",
-        "# --- Fungsi Polimorfik ---\n",
-        "def tampilkan_info_luas(objek_dengan_luas):\n",
-        "  print(\"-\" * 20)\n",
-        "  try:\n",
-        "    # Mencoba memanggil hitung_luas() - inti polimorfisme\n",
-        "    luas = objek_dengan_luas.hitung_luas()\n",
-        "\n",
-        "    # Mencoba mendapatkan nama jika ada (duck typing tambahan)\n",
-        "    try:\n",
-        "      nama = objek_dengan_luas.nama_bentuk()\n",
-        "    except AttributeError:\n",
-        "      # Jika tidak ada nama bentuk(), gunakan nama kelasnya\n",
-        "      nama = type(objek_dengan_luas)._name_\n",
-        "    print(f\"Objek: {nama}\")\n",
-        "    print(f\"Luas: {luas:2f}\") # Format luas 2 angka desimal\n",
-        "\n",
-        "  except AttributeError:\n",
-        "    # Menangani jika objek sama sekali tidak punya .hitung_luas()\n",
-        "    print(f\"Objek {type(objek_dengan_luas)._name_} tidak dapat dihitung luasnya (metode tidak ditemukan)\")\n",
-        "  except NotImplementedError:\n",
-        "    # Menangani jika metode ada tapi belum diimplementasi (dari kelas Bentuk)\n",
-        "    print(f\"Metode 'hitung_luas' belum diimplementasi untuk {type(objek_dengan_luas)._name_}\")\n",
-        "\n",
-        "# --- Kode Utama ---\n",
-        "if __name__ == \"__main__\":\n",
-        "  lingkaran1 = Lingkaran(7)\n",
-        "  persegi1 = Persegi(5)\n",
-        "  taplak1 = TaplakMeja(1.5, 0.8)\n",
-        "  bentuk_dasar = Bentuk() # Objek kelas induk (akan raise NotImplementedError)\n",
-        "  string_biasa = \"Ini string\" # Objek yang tidak relevan\n",
-        "\n",
-        "  daftar_item = [lingkaran1, persegi1, taplak1, bentuk_dasar, string_biasa]\n",
-        "\n",
-        "  print(\"Menampilkan Info Luas (Polimorfisme Campuran):\")\n",
-        "  for item in daftar_item:\n",
-        "    tampilkan_info_luas(item)"
-      ],
-      "metadata": {
-        "id": "q-fGn4wptMeC"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -677,9 +580,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gI5FEGIDtflM",
-        "outputId": "7a751e8f-d559-40dc-d99f-e99da3dbd867"
+        "outputId": "e7d01091-9ad8-4db4-a126-9439ad3a79a6"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,9 +678,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w1RnBiHnzoNe",
-        "outputId": "7b01a521-aac1-4b21-8c85-5f73e758258e"
+        "outputId": "e342bcb4-06b8-4973-9afe-d11ab91ea0ce"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,6 +699,125 @@
             "RAM: 122\n",
             "Jenis casing: akjk\n",
             "Monitor External: Ya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Komputer:\n",
+        "    def __init__(self, merk, processor, ram_gb):\n",
+        "        self.merk = merk\n",
+        "        self.processor = processor\n",
+        "        self.ram_gb = ram_gb\n",
+        "\n",
+        "    def info_spesifikasi(self):\n",
+        "        print(f\"Merk: {self.merk}\")\n",
+        "        print(f\"Processor: {self.processor}\")\n",
+        "        print(f\"RAM: {self.ram_gb} GB\")\n",
+        "\n",
+        "    def jalankan_aplikasi(self, nama_aplikasi):\n",
+        "        print(f\"{self.merk} menjalankan aplikasi: {nama_aplikasi}...\")\n",
+        "\n",
+        "    # Simulasi Overloading - Opsi A: Default Argument\n",
+        "    def upgrade_ram(self, tambahan_gb, tipe_ram=\"DDR4\"):\n",
+        "        self.ram_gb += tambahan_gb\n",
+        "        print(f\"RAM {self.merk} diupgrade sebesar {tambahan_gb} GB (Tipe: {tipe_ram}).\")\n",
+        "        print(f\"Total RAM sekarang: {self.ram_gb} GB\")\n",
+        "\n",
+        "\n",
+        "class Laptop(Komputer):\n",
+        "    def __init__(self, merk, processor, ram_gb, ukuran_layar_inch, berat_kg):\n",
+        "        super().__init__(merk, processor, ram_gb)\n",
+        "        self.ukuran_layar_inch = ukuran_layar_inch\n",
+        "        self.berat_kg = berat_kg\n",
+        "\n",
+        "    def info_spesifikasi(self):\n",
+        "        super().info_spesifikasi()\n",
+        "        print(f\"Ukuran Layar: {self.ukuran_layar_inch} inch\")\n",
+        "        print(f\"Berat: {self.berat_kg} Kg\")\n",
+        "\n",
+        "\n",
+        "class Desktop(Komputer):\n",
+        "    def __init__(self, merk, processor, ram_gb, jenis_casing, monitor_external):\n",
+        "        super().__init__(merk, processor, ram_gb)\n",
+        "        self.jenis_casing = jenis_casing\n",
+        "        self.monitor_external = monitor_external\n",
+        "\n",
+        "    def info_spesifikasi(self):\n",
+        "        super().info_spesifikasi()\n",
+        "        print(f\"Jenis Casing: {self.jenis_casing}\")\n",
+        "        print(f\"Monitor External: {'Ya' if self.monitor_external else 'Tidak'}\")\n",
+        "\n",
+        "\n",
+        "# Demonstrasi Polimorfisme\n",
+        "def cetak_semua_spesifikasi(daftar_komputer):\n",
+        "    for komputer in daftar_komputer:\n",
+        "        komputer.info_spesifikasi()\n",
+        "        print(\"-\" * 30)\n",
+        "\n",
+        "\n",
+        "# Kode Utama\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Objek dari masing-masing kelas\n",
+        "    komputer1 = Komputer(\"Acer\", \"Intel Core i3\", 4)\n",
+        "    laptop1 = Laptop(\"Asus\", \"Intel Core i5\", 8, 14, 1.5)\n",
+        "    desktop1 = Desktop(\"HP\", \"AMD Ryzen 7\", 16, \"Tower\", True)\n",
+        "\n",
+        "    # Jalankan aplikasi untuk contoh\n",
+        "    komputer1.jalankan_aplikasi(\"Microsoft Word\")\n",
+        "    laptop1.jalankan_aplikasi(\"Google Chrome\")\n",
+        "\n",
+        "    # Masukkan semua ke dalam list dan tampilkan spesifikasi\n",
+        "    daftar_komputer = [komputer1, laptop1, desktop1]\n",
+        "    print(\"\\n=== Daftar Spesifikasi Komputer ===\")\n",
+        "    cetak_semua_spesifikasi(daftar_komputer)\n",
+        "\n",
+        "    # Demonstrasi Overloading\n",
+        "    print(\"\\n=== Demonstrasi Upgrade RAM (Overloading) ===\")\n",
+        "    laptop1.upgrade_ram(4)  # Tanpa tipe_ram (default DDR4)\n",
+        "    laptop1.upgrade_ram(8, \"DDR5\")  # Dengan tipe_ram\n"
+      ],
+      "metadata": {
+        "id": "BONdvi2XJtBh",
+        "outputId": "59d61811-3fe0-488f-c2a8-7da1ab5b56c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acer menjalankan aplikasi: Microsoft Word...\n",
+            "Asus menjalankan aplikasi: Google Chrome...\n",
+            "\n",
+            "=== Daftar Spesifikasi Komputer ===\n",
+            "Merk: Acer\n",
+            "Processor: Intel Core i3\n",
+            "RAM: 4 GB\n",
+            "------------------------------\n",
+            "Merk: Asus\n",
+            "Processor: Intel Core i5\n",
+            "RAM: 8 GB\n",
+            "Ukuran Layar: 14 inch\n",
+            "Berat: 1.5 Kg\n",
+            "------------------------------\n",
+            "Merk: HP\n",
+            "Processor: AMD Ryzen 7\n",
+            "RAM: 16 GB\n",
+            "Jenis Casing: Tower\n",
+            "Monitor External: Ya\n",
+            "------------------------------\n",
+            "\n",
+            "=== Demonstrasi Upgrade RAM (Overloading) ===\n",
+            "RAM Asus diupgrade sebesar 4 GB (Tipe: DDR4).\n",
+            "Total RAM sekarang: 12 GB\n",
+            "RAM Asus diupgrade sebesar 8 GB (Tipe: DDR5).\n",
+            "Total RAM sekarang: 20 GB\n"
           ]
         }
       ]
