--- a/Jobsheet_05_PBO.ipynb
+++ b/Jobsheet_05_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbdk0EiiHbzV45ekUpDIum",
+      "authorship_tag": "ABX9TyMrmpbqS4FWRd2mK5LOuFgv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zw0-HjUyYiCI",
-        "outputId": "743d5eb2-3269-4573-9892-96ed0cc980ab"
+        "outputId": "e7a8d230-69bd-416a-d776-c19b60530e4c"
       },
       "outputs": [
         {
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "em54sdxNdHhv",
-        "outputId": "7eef4c84-4fde-414f-d06c-fd900a16be1b"
+        "outputId": "dfe50073-1057-418e-e511-ecafc0ed99c5"
       },
       "execution_count": 2,
       "outputs": [
@@ -238,9 +238,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IGdsesHLfxT0",
-        "outputId": "d3dfe5a2-98e3-4673-9133-6a2cfba24207"
+        "outputId": "a92ed3f5-22c2-4c9d-9567-c76aafb596dd"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MJWGcpN_iXae",
-        "outputId": "9d6ed903-3a93-473d-9477-ce247be0f773"
+        "outputId": "e664841e-a2c2-4157-c3d0-b9a7a6e186da"
       },
       "execution_count": 4,
       "outputs": [
@@ -451,7 +451,11 @@
         "    try:\n",
         "      nama = objek_dengan_luas.nama_bentuk()\n",
         "    except AttributeError:\n",
-        "      print(f\"Objek {type(objek_dengan_luas).__name__} tidak dapat dihitung luasnya (metode tidak ditemukan).\")\n",
+        "      nama = type(objek_dengan_luas).__name__\n",
+        "    print(f\"Objek: {nama}\")\n",
+        "    print(f\"Luas: {luas:.2f}\")\n",
+        "  except AttributeError:\n",
+        "    print(f\"Objek {type(objek_dengan_luas).__name__} tidak dapat dihitung luasnya (metode tidak ditemukan).\")\n",
         "  except NotImplementedError:\n",
         "    print(f\"Metode 'hitung_luas' belum diimplementasi untuk {type(objek_dengan_luas).__name__}.\")\n",
         "\n",
@@ -469,13 +473,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 436
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ieAf5t2Xn9Ny",
-        "outputId": "0067b143-d39f-486a-d2fc-c487a0879473"
+        "outputId": "2d026af4-ceec-432f-fadd-dab3299af187"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,24 +486,18 @@
           "text": [
             "Menampilkan Info Luas (Polimorfisme Campuran):\n",
             "--------------------\n",
+            "Objek: lingkaran\n",
+            "Luas: 153.94\n",
             "--------------------\n",
+            "Objek: Persegi\n",
+            "Luas: 25.00\n",
             "--------------------\n",
-            "Objek TaplakMeja tidak dapat dihitung luasnya (metode tidak ditemukan).\n",
+            "Objek: TaplakMeja\n",
+            "Luas: 1.20\n",
             "--------------------\n",
             "Metode 'hitung_luas' belum diimplementasi untuk Bentuk.\n",
-            "--------------------\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'str' object has no attribute 'hitung_luas'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-8a21d2aa05e8>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Menampilkan Info Luas (Polimorfisme Campuran):\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdaftar_item\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m     \u001b[0mtampilkan_info_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-5-8a21d2aa05e8>\u001b[0m in \u001b[0;36mtampilkan_info_luas\u001b[0;34m(objek_dengan_luas)\u001b[0m\n\u001b[1;32m     42\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-\"\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m   \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mluas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhitung_luas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m       \u001b[0mnama\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobjek_dengan_luas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnama_bentuk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'hitung_luas'"
+            "--------------------\n",
+            "Objek str tidak dapat dihitung luasnya (metode tidak ditemukan).\n"
           ]
         }
       ]
@@ -582,7 +579,7 @@
         "id": "gI5FEGIDtflM",
         "outputId": "e7d01091-9ad8-4db4-a126-9439ad3a79a6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +677,7 @@
         "id": "w1RnBiHnzoNe",
         "outputId": "e342bcb4-06b8-4973-9afe-d11ab91ea0ce"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
