--- a/Jobsheet_05_PBO.ipynb
+++ b/Jobsheet_05_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMrmpbqS4FWRd2mK5LOuFgv",
+      "authorship_tag": "ABX9TyNr05OJcgTC+ll1qDqTlr7W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gI5FEGIDtflM",
-        "outputId": "e7d01091-9ad8-4db4-a126-9439ad3a79a6"
+        "outputId": "93d62744-455b-4f4d-8453-bac508e2327d"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,84 +626,6 @@
       "cell_type": "code",
       "source": [
         "class Komputer:\n",
-        "  def __init__(self, merk, processor, ram_gb):\n",
-        "    self.merk = merk\n",
-        "    self.processor = processor\n",
-        "    self.ram_gb = ram_gb\n",
-        "\n",
-        "  def info_spesifikasi(self):\n",
-        "    print(f\"Merk: {self.merk}\")\n",
-        "    print(f\"Processor: {self.processor}\")\n",
-        "    print(f\"RAM: {self.ram_gb}\")\n",
-        "\n",
-        "  def jalankan_aplikasi(self, nama_aplikasi):\n",
-        "    print(f\"{self.merk} menjalankan aplikasi {self.nama_aplikasi}\")\n",
-        "\n",
-        "class Laptop(Komputer):\n",
-        "  def __init__(self, merk, processor, ram_gb, ukuran_layar_inch, berat_kg):\n",
-        "    super().__init__(merk, processor, ram_gb)\n",
-        "    self.ukuran_layar_inch = ukuran_layar_inch\n",
-        "    self.berat_kg = berat_kg\n",
-        "\n",
-        "  def info_spesifikasi(self):\n",
-        "    super().info_spesifikasi()\n",
-        "    print(f\"Ukuran Layar: {self.ukuran_layar_inch} inch\")\n",
-        "    print(f\"Berat: {self.berat_kg} kg\")\n",
-        "\n",
-        "class Desktop(Komputer):\n",
-        "  def __init__(self, merk, processor, ram_gb, jenis_casing, monitor_external):\n",
-        "    super().__init__(merk, processor, ram_gb)\n",
-        "    self.jenis_casing = jenis_casing\n",
-        "    self.monitor_external = monitor_external\n",
-        "\n",
-        "  def info_spesifikasi(self):\n",
-        "    super().info_spesifikasi()\n",
-        "    print(f\"Jenis casing: {self.jenis_casing}\")\n",
-        "    print(f\"Monitor External: {'Ya' if self.monitor_external else 'Tidak'}\")\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "  komputer1 = Komputer(\"Asus\", \"akjk\", 122)\n",
-        "  laptop1 = Laptop(\"Asus\", \"akjk\", 122, 12, 12)\n",
-        "  desktop1 = Desktop(\"Asus\", \"akjk\", 122, \"akjk\", True)\n",
-        "\n",
-        "  komputer1.info_spesifikasi()\n",
-        "  laptop1.info_spesifikasi()\n",
-        "  desktop1.info_spesifikasi()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w1RnBiHnzoNe",
-        "outputId": "e342bcb4-06b8-4973-9afe-d11ab91ea0ce"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Merk: Asus\n",
-            "Processor: akjk\n",
-            "RAM: 122\n",
-            "Merk: Asus\n",
-            "Processor: akjk\n",
-            "RAM: 122\n",
-            "Ukuran Layar: 12 inch\n",
-            "Berat: 12 kg\n",
-            "Merk: Asus\n",
-            "Processor: akjk\n",
-            "RAM: 122\n",
-            "Jenis casing: akjk\n",
-            "Monitor External: Ya\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Komputer:\n",
         "    def __init__(self, merk, processor, ram_gb):\n",
         "        self.merk = merk\n",
         "        self.processor = processor\n",
@@ -717,7 +639,7 @@
         "    def jalankan_aplikasi(self, nama_aplikasi):\n",
         "        print(f\"{self.merk} menjalankan aplikasi: {nama_aplikasi}...\")\n",
         "\n",
-        "    # Simulasi Overloading - Opsi A: Default Argument\n",
+        "    # Simulasi Overloading dengan Default Argument\n",
         "    def upgrade_ram(self, tambahan_gb, tipe_ram=\"DDR4\"):\n",
         "        self.ram_gb += tambahan_gb\n",
         "        print(f\"RAM {self.merk} diupgrade sebesar {tambahan_gb} GB (Tipe: {tipe_ram}).\")\n",
@@ -748,73 +670,62 @@
         "        print(f\"Monitor External: {'Ya' if self.monitor_external else 'Tidak'}\")\n",
         "\n",
         "\n",
-        "# Demonstrasi Polimorfisme\n",
+        "# Fungsi untuk mendemonstrasikan polimorfisme\n",
         "def cetak_semua_spesifikasi(daftar_komputer):\n",
+        "    print(\"\\n--- Daftar Spesifikasi Semua Komputer ---\")\n",
         "    for komputer in daftar_komputer:\n",
         "        komputer.info_spesifikasi()\n",
-        "        print(\"-\" * 30)\n",
+        "        print(\"-\" * 40)\n",
         "\n",
         "\n",
-        "# Kode Utama\n",
+        "# Kode utama\n",
         "if __name__ == \"__main__\":\n",
-        "    # Objek dari masing-masing kelas\n",
-        "    komputer1 = Komputer(\"Acer\", \"Intel Core i3\", 4)\n",
-        "    laptop1 = Laptop(\"Asus\", \"Intel Core i5\", 8, 14, 1.5)\n",
-        "    desktop1 = Desktop(\"HP\", \"AMD Ryzen 7\", 16, \"Tower\", True)\n",
+        "    laptop1 = Laptop(\"Asus\", \"Intel Core i5\", 8, 14.0, 1.3)\n",
+        "    desktop1 = Desktop(\"Lenovo\", \"AMD Ryzen 5\", 16, \"Tower\", True)\n",
         "\n",
-        "    # Jalankan aplikasi untuk contoh\n",
-        "    komputer1.jalankan_aplikasi(\"Microsoft Word\")\n",
-        "    laptop1.jalankan_aplikasi(\"Google Chrome\")\n",
+        "    daftar_komputer = [laptop1, desktop1]\n",
         "\n",
-        "    # Masukkan semua ke dalam list dan tampilkan spesifikasi\n",
-        "    daftar_komputer = [komputer1, laptop1, desktop1]\n",
-        "    print(\"\\n=== Daftar Spesifikasi Komputer ===\")\n",
+        "    # Demonstrasi Polimorfisme\n",
         "    cetak_semua_spesifikasi(daftar_komputer)\n",
         "\n",
-        "    # Demonstrasi Overloading\n",
-        "    print(\"\\n=== Demonstrasi Upgrade RAM (Overloading) ===\")\n",
-        "    laptop1.upgrade_ram(4)  # Tanpa tipe_ram (default DDR4)\n",
-        "    laptop1.upgrade_ram(8, \"DDR5\")  # Dengan tipe_ram\n"
+        "    # Demonstrasi overloading (default argument)\n",
+        "    print(\"\\n--- Upgrade RAM ---\")\n",
+        "    laptop1.upgrade_ram(4)\n",
+        "    desktop1.upgrade_ram(8, \"DDR5\")"
       ],
       "metadata": {
         "id": "BONdvi2XJtBh",
-        "outputId": "59d61811-3fe0-488f-c2a8-7da1ab5b56c1",
+        "outputId": "2317ea90-952e-43d3-b14c-2326acf60cbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Acer menjalankan aplikasi: Microsoft Word...\n",
-            "Asus menjalankan aplikasi: Google Chrome...\n",
             "\n",
-            "=== Daftar Spesifikasi Komputer ===\n",
-            "Merk: Acer\n",
-            "Processor: Intel Core i3\n",
-            "RAM: 4 GB\n",
-            "------------------------------\n",
+            "--- Daftar Spesifikasi Semua Komputer ---\n",
             "Merk: Asus\n",
             "Processor: Intel Core i5\n",
             "RAM: 8 GB\n",
-            "Ukuran Layar: 14 inch\n",
-            "Berat: 1.5 Kg\n",
-            "------------------------------\n",
-            "Merk: HP\n",
-            "Processor: AMD Ryzen 7\n",
+            "Ukuran Layar: 14.0 inch\n",
+            "Berat: 1.3 Kg\n",
+            "----------------------------------------\n",
+            "Merk: Lenovo\n",
+            "Processor: AMD Ryzen 5\n",
             "RAM: 16 GB\n",
             "Jenis Casing: Tower\n",
             "Monitor External: Ya\n",
-            "------------------------------\n",
+            "----------------------------------------\n",
             "\n",
-            "=== Demonstrasi Upgrade RAM (Overloading) ===\n",
+            "--- Upgrade RAM ---\n",
             "RAM Asus diupgrade sebesar 4 GB (Tipe: DDR4).\n",
             "Total RAM sekarang: 12 GB\n",
-            "RAM Asus diupgrade sebesar 8 GB (Tipe: DDR5).\n",
-            "Total RAM sekarang: 20 GB\n"
+            "RAM Lenovo diupgrade sebesar 8 GB (Tipe: DDR5).\n",
+            "Total RAM sekarang: 24 GB\n"
           ]
         }
       ]
